Bug 1828137 - Support accelerating large clearRects if they encompass entire viewport. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D175727